force-app/main/default/objects/open_order_summary_vw__x/open_order_summary_vw__x.object-meta.xml
<CustomObject>
    <description>open_order_summary_vw</description>
    <label>open_order_summary_vw</label>
    <pluralLabel>open_order_summary_vw</pluralLabel>
</CustomObject>