force-app/main/default/objects/open_order_summary_vw__x/fields/committed_ship_date__c.field-meta.xml
<CustomField>
    <fullName>committed_ship_date__c</fullName>
    <description>committed_ship_date</description>
    <label>committed_ship_date</label>
    <type>DateTime</type>
</CustomField>