force-app/main/default/objects/open_order_summary_vw__x/fields/current_requested_date__c.field-meta.xml
<CustomField>
    <fullName>current_requested_date__c</fullName>
    <description>current_requested_date</description>
    <label>current_requested_date</label>
    <type>DateTime</type>
</CustomField>