force-app/main/default/objects/open_order_summary_vw__x/fields/order_booked_date__c.field-meta.xml
<CustomField>
    <fullName>order_booked_date__c</fullName>
    <description>order_booked_date</description>
    <label>order_booked_date</label>
    <type>DateTime</type>
</CustomField>