force-app/main/default/objects/open_order_summary_vw__x/fields/sched_ship_date_time__c.field-meta.xml
<CustomField>
    <fullName>sched_ship_date_time__c</fullName>
    <description>sched_ship_date_time</description>
    <label>sched_ship_date_time</label>
    <type>DateTime</type>
</CustomField>